--- a/apic-content/1-test-argo.yaml
+++ b/apic-content/1-test-argo.yaml
@@ -1,15 +1,19 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: bootstrap-apic-eci
+  name: test-argo
   namespace: openshift-gitops
+  annotations:
+    argocd.argoproj.io/sync-wave: "10"
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
     namespace: openshift-gitops
     server: https://kubernetes.default.svc
   project: default
   source:
-    path: apic-content
+    path: apic-content/test-argo
     repoURL: https://github.com/chechusv/apic-gitops.git
     targetRevision: main
   syncPolicy:
